July 1, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/psxbios.c: Use s32 instead of long in DIRENTRY struct for
   compatibility with x86_64. Fixed error in MSVC6.

June 30, 2009 Peter Collingbourne <peter@pcc.me.uk>

 * libpcsxcore/psxbios.c: Implemented psxBios_rename(). Interpret a file
   path of the form buX0: as buX0:* in firstfile() and nextfile(). Ensure
   that memory card data is saved when deleting a file. Advance the file
   offset when a write or synchronous read occurs.

June 30, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/peopsxgl/gpu.c: Changed a format string from %08lx to %08x.

June 30, 2009 Peter Collingbourne <peter@pcc.me.uk>

 * plugins/dfcdrom/main.c: #include locale.h as well as libintl.h to allow
   the code to compile in unoptimized mode.
 * plugins/dfinput/cfg.c: Likewise.
 * plugins/dfsound/spucfg-0.1df/main.c: Likewise.
 * plugins/dfxvideo/gpucfg-0.1df/main.c: Likewise.
 * plugins/peopsxgl/gpucfg/main.c: Likewise.
 * plugins/peopsxgl/gpucfg/interface.c: Likewise.
 * libpcsxcore/psxbios.c: Fixed a cast that may cause problems on x86_64.
   Allocate stack space for programs which store data below the stack pointer
   when an interrupt occurs.

June 29, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cheat.c: Implemented Cheat Search.
 * libpcsxcore/cheat.h: Likewise.
 * gui/Cheat.c: Likewise.
 * gui/Gtk2Gui.c: Backup the memory for cheat search when continuing emulation.
 * data/pcsx.glade2: Tweaked the cheat search dialog for implemention. Fixed
   the main menu under newer version of Glade.
 * libpcsxcore/r3000a.c: Free cheat search results on exit.
 * libpcsxcore/psxmem.h: Fixed a typo in psxMu8(). Removed check for __sh__
   macro.
 * win32/gui/WndMain.c: Restarting is no longer needed at first run.
 * po/zh_CN.po, po/zh_TW.po: Updated.

June 20, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/misc.c: Fixed a bug which prevented files in a subdirectory