@@ -2,7 +2,7 @@ Source: pcsxr
 Section: otherosfs
 Priority: extra
 Maintainer: Wei Mingzhi <whistler@openoffice.org>
-Build-Depends: debhelper (>= 5), libgtk2.0-dev, libglade2-dev, zlib1g-dev | libz-dev, libxv-dev, libxtst-dev, nasm, libbz2-dev, libgl1-mesa-dev, libxxf86vm-dev
+Build-Depends: debhelper (>= 5), libgtk2.0-dev, libglade2-dev, zlib1g-dev | libz-dev, libxv-dev, libxtst-dev, nasm, libbz2-dev, libgl1-mesa-dev, libxxf86vm-dev, libasound2-dev
 Standards-Version: 3.7.3
 
 Package: pcsxr
